--- a/terms.html
+++ b/terms.html
@@ -19,10 +19,13 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,900;1,400;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Engagement&family=Krona+One&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <style>
+
         .gridHeader-sideNav {
-                font-weight: 900;
+                font-weight: 400;
+                font-family: "Krona One", Arial, Helvetica, sans-serif;
+                text-transform: capitalize;
                 max-width: 280px;
                 width: 100%;
                 margin-top: 0.67em;
@@ -50,13 +53,13 @@
         }
 
         .textMenuCurrentPage {
-            color: #707070;
+            color: var(--DMaccent-color);
         }
 
         @media only screen and (min-width: 760px) {
             .textMenuCurrentPage {
-                color: #707070;
-                border: #707070 dotted 2px;
+                color: var(--DMaccent-color);
+                border: var(--DMaccent-color) dotted 2px;
                 border-radius: 10%;
                 font-weight: 900;
                 text-decoration: underline;
@@ -69,6 +72,25 @@
 <body id="body">
     <div class="navBar">
         <header>
+        <div id="DMswitchContainer">
+            <label class="switch">
+                <input class="switch__input" type="checkbox" checked role="switch"/>
+                    <span class="switch__icon">
+                        <span class="switch__icon-part switch__icon-part--1"></span>
+                        <span class="switch__icon-part switch__icon-part--2"></span>
+                        <span class="switch__icon-part switch__icon-part--3"></span>
+                        <span class="switch__icon-part switch__icon-part--4"></span>
+                        <span class="switch__icon-part switch__icon-part--5"></span>
+                        <span class="switch__icon-part switch__icon-part--6"></span>
+                        <span class="switch__icon-part switch__icon-part--7"></span>
+                        <span class="switch__icon-part switch__icon-part--8"></span>
+                        <span class="switch__icon-part switch__icon-part--9"></span>
+                        <span class="switch__icon-part switch__icon-part--10"></span>
+                        <span class="switch__icon-part switch__icon-part--11"></span>
+                    </span>
+                    <span class="switch__sr">Dark Mode</span>
+            </label>
+        </div>
         <a href="https://design.bymichaelmarshall.com/">
             <div class="homeIcon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17.195" height="16.25" viewBox="0 0 17.195 16.25"><path class="homeIconSVGPath" d="M14.207-2338.121H4.245a1.519,1.519,0,0,1-1.519-1.519v-4.762a1.52,1.52,0,0,1-1.652-.331,1.519,1.519,0,0,1,0-2.148l7.044-7.044a1.515,1.515,0,0,1,1.108-.444,1.515,1.515,0,0,1,1.108.444l7.044,7.044a1.519,1.519,0,0,1,0,2.148,1.52,1.52,0,0,1-1.652.331v4.762a1.519,1.519,0,0,1-1.519,1.519Zm-4.98-12.615h0Z" transform="translate(-0.629 2354.371)"/></svg>
@@ -77,7 +99,7 @@
         </header>
         <!-- Nav -->
         <nav>
-            <div class="navWrapper">
+            <!--<div class="navWrapper">
                 <div class="nav">
                 <input id="checkbox" type="checkbox"/>
                     <span></span>
@@ -101,7 +123,7 @@
                     </div>
                 </div>
             </div>
-        </nav>
+        </nav>-->
     </div>
 <!--Body Content-->
 <div id="bodyContent">
@@ -120,14 +142,14 @@
             </div>
         </div>
         <div class="gridBody">
-            <h1>Terms of Use</h1>
+            <h2>Terms of Use</h2>
             <p>1.1 These website terms explain how you may use the website (bymichaelmarshall.com and its subdomains) and/or its content as provided to you by me, Michael Marshall (I, me, my, we, us, our).
             <p>1.2 By using the website you agree to be bound by these website terms. If you do not agree with any of these website terms, you should stop using the website immediately.</p>
         </div>
         <div class="gridMargin"></div>
         <div class="gridHeader"></div>
         <div class="gridBody">
-            <h1 id="use">Using the website</h1>
+            <h2 id="use">Using the website</h2>
             <p>2.1 The website is for your personal and non-commercial use only.</p>
             <p>2.2 You agree that you are solely responsible for all costs and expenses you may incur in relation to your use of the website.</p>
             <p>2.3 I make no promise that the website is appropriate or available for use in locations outside of Canada. If you choose to access the website from locations outside of Canada, you acknowledge you do so on your own initiative and are, as a condition of your use of the website, you agree not to:</p>
@@ -139,7 +161,7 @@
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="privacy">Privacy</h1>
+            <h2 id="privacy">Privacy</h2>
             <p>3.1 By using the website or providing me with any personal information you agree to your personal information being used and stored in the manner set out in this policy.</p>
             <p>3.2 The only information this website collects is collected via the contact form. This information may include: your name, email address, and any other information you chose to provide in the body of your form submission.</p>
             <p>3.3 How I may use this information:<br>
@@ -153,7 +175,7 @@
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="ownership">Ownership, use and intellectual property rights</h1>
+            <h2 id="ownership">Ownership, use and intellectual property rights</h2>
             <p>4.1 The intellectual property rights in the website and in any text, images, video, audio or other multimedia content, software or other information or material submitted to or accessible from the website are owned by me and my licensors, or their use is permitted under fair dealing (<i>Section 29 of the Copyright Act, Canada</i>).</p>
             <p>4.2 I and my licensors reserve all our intellectual property rights (including all copyright, trademarks, domain names, design rights, database rights, patents and all other intellectual property rights of any kind) whether registered or unregistered anywhere in the world. This means, for example, that we remain owners of them and are free to use them as we see fit.</p> 
             <p>4.3 Nothing in these website terms grants you any legal rights in the website other than as necessary for you to access it. You agree not to adjust, try to circumvent, or delete any notices contained on the website or any of its content (including any intellectual property notices) and in particular, in any digital rights or other security technology embedded or contained within the website or its content.</p>
@@ -162,7 +184,7 @@
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="accuracy">Accuracy of information and availability of the website</h1>
+            <h2 id="accuracy">Accuracy of information and availability of the website</h2>
             <p>5.1 I try to make sure that the website is accurate, up-to-date and free from bugs, but I cannot promise that it will be. Furthermore, I cannot promise that the website will be fit or suitable for any purpose. Any reliance that you may place on the information on the website is at your own risk.</p>
             <p>5.2 I may suspend or terminate access or operation of the website at any time as I see fit.</p> 
             <p>5.3 The website content is provided for your general information purposes only and to inform you about me and my professional and charitable activities, news, general support, services and other websites that may be of interest. It has not been tailored to your specific requirements or circumstances.</p>
@@ -173,28 +195,28 @@
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="3rdparty">Hyperlinks and third party websites</h1>
+            <h2 id="3rdparty">Hyperlinks and third party websites</h2>
             <p>6.1 The website may contain hyperlinks or references to other websites. Any hyperlinks or references are provided for your convenience only. I have no control over third party websites and accept no legal responsibility for any content, material or information contained in them.</p>
         </div>
         <div class="gridMargin"></div>
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="liability">Limitation on our liability</h1>
+            <h2 id="liability">Limitation on our liability</h2>
             <p>7.1 Except for any legal responsibility that I cannot exclude in law (such as for death or personal injury) or arising under applicable laws relating to the protection of your personal information, I am not legally responsible for any loss because you use this site.</p>
         </div>
         <div class="gridMargin"></div>
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="changes">Changes to these website terms</h1>
+            <h2 id="changes">Changes to these website terms</h2>
             <p>8.1 I reserve the right to vary these website terms from time to time. My updated terms will be displayed on the website and by continuing to use and access the website, you agree to be bound by any changes made by me.</p>
         </div>
         <div class="gridMargin"></div>
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1 id="contact">Contact</h1>
+            <h2 id="contact">Contact</h2>
             <p>If you would like to contact me about these terms, or otherwise, please refer to the email address and social media links on the website’s contact page.</p>
         </div>
         <div class="gridMargin"></div>
@@ -215,14 +237,14 @@
 <!--/Body Content-->
     <footer class="footer">
         <a href="terms">
-            <p class="admintext" style="color: #CEC177">©2021-<span id="currentYear">2021</span>
+            <p class="admintext" style="color: var(--DMaccent-color)">©2021-<span id="currentYear">2021</span>
             </p>
         </a>
-        <div class="icons">
+        <!--<div class="icons">
             <a href="https://design.bymichaelmarshall.com/contact">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z"/></svg>
             </a>
-        </div>
+        </div>-->
     </footer> 
 </body>
 <!--JS-->
